# XiaoKitty

./: LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/keystore/: kspace.keystore
app/src/main/: AndroidManifest.xml
app/src/main/aidl/app/aidl/: IpcService.aidl
app/src/main/assets/: aarch64-bin.tar.xz  application-user.txt  days.json  linkdata.json
app/src/main/cpp/: CMakeLists.txt  main.cpp  null.cpp
app/src/main/java/app/: MainActivity.kt  TaskActivity.kt
app/src/main/res/drawable/: ccc.xml  ic_fragment_just.xml  ic_fragment_task.xml  ic_fragment_valo.xml  ic_fragment_vote.xml  ic_xyn_aa.xml  ic_xyn_android_app.xml  ic_xyn_iphone.xml  ic_xyn_wa.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  activity_task.xml  app_bar_main.xml  app_info_main.xml  atek_menu.xml  fragment_aapt.xml  fragment_arts.xml  fragment_atek.xml  fragment_fast.xml  fragment_just.xml  fragment_save.xml  fragment_star.xml  fragment_task.xml  fragment_upar.xml  fragment_uppk.xml  fragment_valo.xml  fragment_vote.xml  item_art.xml  nav_header_main.xml
app/src/main/res/menu/: bottom_nav_menu.xml  menu_image.xml  menu_task.xml  recyclerview1_menu.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/raw/: application_by.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: accessory_filter.xml  file.xml  shortcuts.xml
(+43 files in other folders)
